feat(ticket): 관람 내역 API 정리 및 soft delete 보완
- 티켓 요청/응답 DTO 및 컨트롤러 로직 정리
- /api/v1/tickets 경로로 통일
- ticket 연관(Actor, TicketActor)에서 불필요한 soft delete 제거
- deleted_at 없는 테이블에서 발생하던 조회 오류 방지
- 빌드/테스트/H2/도커 등 로컬 개발환경 설정 함께 정리